# bell-memo-desktop

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  postcss.config.js  tsconfig.json  vite.config.ts
src/: App.tsx  api.d.ts  main.tsx  routes.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: constants.rs  lib.rs  main.rs  prepare.rs
src-tauri/src/bootstrap/: app.rs  mod.rs  prepare.rs
src-tauri/src/cmd/: memo_data.rs  memo_tag.rs  mod.rs  sync.rs
src-tauri/src/common/: response.rs
src-tauri/src/config/: app_config.rs
src-tauri/src/model/: db.rs  mod.rs  model.rs  sql.rs
src-tauri/src/plugin/: config.rs  db.rs  log.rs  mod.rs  timer.rs
src-tauri/src/util/: app_path.rs  mod.rs
src/components/: Tag.module.less  Tag.tsx  index.ts
src/components/Confirm/: Confirm.module.less  Confirm.tsx  index.tsx
src/components/Copy/: index.tsx
src/components/Drawer/: index.tsx
src/components/Message/: Message.tsx  index.tsx
src/components/Tag/: index.tsx
src/hooks/: index.ts  useMergeState.ts  useMergedValue.ts
src/layout/: BasicLayout.tsx  EmptyLayout.tsx  Header.tsx  MainLayout.tsx  main.module.less
src/routes/detail/: index.module.less  index.tsx
src/routes/index/: Action.tsx  Card.module.less  Card.tsx  Content.module.less  Content.tsx  Header.module.less  Header.tsx  index.tsx
src/routes/record/: AddRecord.tsx  EditRecord.tsx
src/routes/tag/: SelectTag.tsx
src/states/: index.ts
src/states/features/: recordSlice.ts
src/store/: index.ts
src/types/: commander.d.ts  index.d.ts  model.d.ts  plugin.d.ts
src/util/: config.ts  log.ts  request.ts  types.ts  utils.ts
