[package]
name = "lingze-desktop"
version = "0.0.0"
description = "A Tauri App"
authors = ["lingze Project"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.1", features = ["api-all"] }
log = "^0.4"
log4rs = "^1.2.0"
reqwest = {version = "0.11.12",feature = ["json"] }
tokio = {version = "1.21.2",feature = ["full"] }
delay_timer = "0.11.3"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
