[package]
name = "bell-memo-desktop"
version = "0.0.0"
description = "A Tauri App"
authors = ["BellMemo Project"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.3", features = ["clipboard-all", "dialog", "dialog-open", "dialog-save", "fs-all", "system-tray"] }
log = "^0.4"
log4rs = "^1.2.0"
tokio = {version = "1.21.2",features = ["full"] }
delay_timer = "0.11.3"
uuid = {version = "1.2.1",features = ["v4"] }
chrono = "0.4.22"
sqlx = {version= "0.6.3",features = ["sqlite", "runtime-tokio-native-tls"] }
futures = "0.3.28"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
